--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
         <artifactId>mongodb-driver-sync</artifactId>
         <version>3.11.2</version>
     </dependency>
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20190722</version>
+    </dependency>
   </dependencies>
 
   <build>
